# environment-monitor

./: CMakeLists.txt  lv_conf.h
include/: bme280_i2c.h  graphics.h  st7789.h
src/: bmp280_i2c.c  graphics.c  main.c  st7789.c
